--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </ul>
   </header>
   <main>
-    <h1>Intro to Internet Programming, Final Project</h1>
+    <h1>Intro to Internet Programming, Assignment 3</h1>
     <h2>Vegan Ipsum</h2>
     <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato.</p>
     <h2>Vegetarian Ipsum</h2>
